--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.4"
+    "react-native": "0.66.4",
+    "react-native-datawedge-intents": "^0.1.8"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
